# voice-commander

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml
docs/: .readthedocs.yaml  actions.rst  conditions.rst  conf.py  docrequirements.txt  index.rst  triggers.rst  viewcode.py
voice_commander/: __init__.py  __main__.py  _utils.py  actions.py  app.py  commander.py  conditions.py  gui.py  joy_listener.py  profile.py  profiles.py  triggers.py  voice_listener.py
voice_commander/core/: _utils.py  app.py  conditions.py  profiles.py  triggers.py  voice_listener.py
voice_commander/core/schema/: __init__.py  __main__.py  schema.json  v0.py
voice_commander/schema/: __init__.py  __main__.py  schema.json  v0.py
