[metadata]

name = voice-commander
version = 0.0.2
author_email = spencer.young@spyoung.com
author = Spencer Young
description = Voice-controlled macros and hotkeys.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyoungtech/voice-commander
project_urls =
    Documentation = https://voice-commander.readthedocs.io/en/latest/
    Funding = https://github.com/sponsors/spyoungtech/
    Source = https://github.com/spyoungtech/voice-commander
    Tracker = https://github.com/spyoungtech/voice-commander/issues
keywords =
    ahk
    autohotkey
    windows
    mouse
    keyboard
    automation
    pyautogui
    voice-attack
    voice
    macro

license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
include_package_data = True
python_requires = >=3.12.0
packages =
    voice_commander
    voice_commander.schema

install_requires =
    pydantic
    SpeechRecognition
    thefuzz
    pyaudio
    setuptools
    ahk>=1.7.6
    json-five
    pyyaml



[options.package_data]
voice_commander =
    py.typed
